WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21303
[GTK] Scrolling glitches
https://bugs.webkit.org/show_bug.cgi?id=21303
Summary
[GTK] Scrolling glitches
Mikael Tennhammar
Reported
2008-10-02 03:57:04 PDT
The visual area is not updated when auto scrolling.
Attachments
Changes in ScrollViewGtk to have teh view repainted
(605 bytes, patch)
2008-10-02 03:59 PDT
,
Mikael Tennhammar
no flags
Details
Formatted Diff
Diff
Fix the repainting of the content when scrolling via the scrollbars
(1.09 KB, patch)
2008-10-03 03:45 PDT
,
Mikael Tennhammar
no flags
Details
Formatted Diff
Diff
Fix the repainting of the content when scrolling via the scrollbars
(587 bytes, patch)
2008-10-03 04:43 PDT
,
Mikael Tennhammar
hyatt
: review-
Details
Formatted Diff
Diff
Kill off more of ScrollViewGtk, fix GTK+ rendering issues
(25.81 KB, patch)
2008-10-03 05:24 PDT
,
Alp Toker
hyatt
: review-
Details
Formatted Diff
Diff
Scrolling fixes
(7.50 KB, patch)
2008-10-18 00:28 PDT
,
Alp Toker
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mikael Tennhammar
Comment 1
2008-10-02 03:59:22 PDT
Created
attachment 24016
[details]
Changes in ScrollViewGtk to have teh view repainted
Dave Hyatt
Comment 2
2008-10-02 04:27:56 PDT
Comment on
attachment 24016
[details]
Changes in ScrollViewGtk to have teh view repainted r=me Gtk had implemented the update() method incorrectly (when it was never meant to be an invalidate), so I guess this got caused by me fixing that.
Dave Hyatt
Comment 3
2008-10-02 11:24:46 PDT
I landed this with my next round of ScrollView changes in 37198.
Mikael Tennhammar
Comment 4
2008-10-03 03:45:20 PDT
Created
attachment 24046
[details]
Fix the repainting of the content when scrolling via the scrollbars The current code do not make that SccrollView repaint itself. after scroll. Note For the reviewer! I have only experience from GTK, but it seems clean to call the ScrollView's own method.
Mikael Tennhammar
Comment 5
2008-10-03 03:47:15 PDT
After latest updates of ScrollViewGtk the repainting of the view does not happen.
Mikael Tennhammar
Comment 6
2008-10-03 04:43:08 PDT
Created
attachment 24048
[details]
Fix the repainting of the content when scrolling via the scrollbars The current code do not make that SccrollView repaint itself. after scroll. Note For the reviewer! I have only experience from GTK, but it seems clean to call the ScrollView's own method. This is the same patch as the previous one, but there where some printout in the old one.
Alp Toker
Comment 7
2008-10-03 05:24:06 PDT
Created
attachment 24049
[details]
Kill off more of ScrollViewGtk, fix GTK+ rendering issues WebCore/ChangeLog | 42 ++++++ WebCore/platform/ScrollView.cpp | 18 -- WebCore/platform/ScrollView.h | 2 WebCore/platform/gtk/ScrollViewGtk.cpp | 180 +++++++------------------- WebCore/platform/gtk/ScrollbarGtk.cpp | 110 ++++++++++----- WebCore/platform/gtk/ScrollbarGtk.h | 5 WebKit/gtk/ChangeLog | 28 ++++ WebKit/gtk/WebCoreSupport/ChromeClientGtk.cpp | 50 ++++++- WebKit/gtk/webkit/webkitwebview.cpp | 24 +++ 9 files changed, 263 insertions(+), 196 deletions(-) So, I took the recent breakage as an opportunity to fix invalidation/repaint issues we've had in the GTK+ port since the early days and kill off the cruft in ScrollViewGtk/ScrollViewPrivate (which are almost dead now).
Dave Hyatt
Comment 8
2008-10-03 11:12:08 PDT
Comment on
attachment 24048
[details]
Fix the repainting of the content when scrolling via the scrollbars Made obsolete by my fixes last night.
Dave Hyatt
Comment 9
2008-10-03 11:12:58 PDT
Comment on
attachment 24049
[details]
Kill off more of ScrollViewGtk, fix GTK+ rendering issues You need to merge this patch to ToT. I landed a fix for my Gtk autoscroll breakage last night. I think this patch is better than what I did... you just need to get merged to ToT to get a new patch for review.
Dave Hyatt
Comment 10
2008-10-03 11:15:06 PDT
ScrollbarGtk(ScrollbarClient*, ScrollbarOrientation, ScrollbarControlSize, GtkAdjustment* = 0); ScrollbarGtk is refcounted, so please make a create method instead and don't make your new constructor public.
Darin Adler
Comment 11
2008-10-12 19:21:22 PDT
Comment on
attachment 24016
[details]
Changes in ScrollViewGtk to have teh view repainted Clearing review flag from this obsolete patch.
Alp Toker
Comment 12
2008-10-18 00:28:14 PDT
Created
attachment 24484
[details]
Scrolling fixes
Dave Hyatt
Comment 13
2008-10-20 08:26:53 PDT
Comment on
attachment 24484
[details]
Scrolling fixes r=me
Alp Toker
Comment 14
2008-10-20 08:41:50 PDT
Landed in
r37725
. (Would still be nice to pick up the ScrollbarGtk cleanup changes some time later, they weren't in the patch.)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug